--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Twitter</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="background: #000;">
+    <div id="twitter">
+      <div class="Started__App" style="width: 100vw;
+        height: 100vh;
+        top: 0;
+        left: 0;">
+        <img style="
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 99px;
+        " src="/TwitterLogo.png" alt="logo" />
+      </div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
